--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,4 +1,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="/bootstrap/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
+<script src="/bootstrap/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+
+<script src="/js/app/index.js"></script>
 </body>
 </html>
