--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -4,6 +4,15 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">게시글 등록</a>
+            {{#userName}}
+                <span id="user">{{userName}}</span>
+                <!-- 스프링 시큐리티에서 기본적으로 제공하는 로그아웃 url, 별도 컨트롤러를 만들 필요가 없다. -->
+                <a href="/logout" class="btn btn-info active" role="button">로그아웃</a>
+            {{/userName}}
+            {{^userName}}
+                <!-- 스프링 시큐리티에서 기본적으로 제공하는 로그인 url, 별도 컨트롤러를 만들 필요가 없다. -->
+                <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">구글 로그인</a>
+            {{/userName}}
         </div>
     </div>
 
