--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -12,6 +12,7 @@
             {{^userName}}
                 <!-- 스프링 시큐리티에서 기본적으로 제공하는 로그인 url, 별도 컨트롤러를 만들 필요가 없다. -->
                 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">구글 로그인</a>
+                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">네이버 로그인</a>
             {{/userName}}
         </div>
     </div>
