--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,5 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="/bootstrap/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+<script src="/js/bootstrap/bootstrap.min.js"></script>
 
 <script src="/js/app/index.js"></script>
 </body>
